renamed main notebook file

--- a/PyPeerReview.ipynb
+++ b/PyPeerReview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,341 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing best candidate-reviewer matching based on 1) topics, 2) methodology \n",
-      "                  and 3) the recent review history of the possible reviewers.\n",
-      "\n",
-      "\n",
-      "                  NOTE: By default, it is assumed that the last four columns of\n",
-      "                  the reviewer's CSV file should contains the history of the\n",
-      "                  reviews last four sessions (e.g. 2019S; 2019F; 2020S; 2020F). \n",
-      "                  If this is not the case, please change the following line of\n",
-      "                  code to reflect how many columns to use:\n",
-      "                  'reviewer_history = list(reviewers_data.iloc[:,-4:])'.\n",
-      "\n",
-      "Total reviewers: 150; Total Candidates: 10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Reviewer Name</th>\n",
-       "      <th>Candidate Name</th>\n",
-       "      <th>Itimized score [topics, methods, reviewer's history]</th>\n",
-       "      <th>total_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Acevedo, Orlando</td>\n",
-       "      <td>Bobby Plascencia</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Lin, Yu-Shan</td>\n",
-       "      <td>Bobby Plascencia</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Luber, Sandra</td>\n",
-       "      <td>Bobby Plascencia</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Wolf, Antje</td>\n",
-       "      <td>Danuta Voegele</td>\n",
-       "      <td>[1.000, 0.000, 1.000]</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Acevedo, Orlando</td>\n",
-       "      <td>Danuta Voegele</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Lin, Yu-Shan</td>\n",
-       "      <td>Danuta Voegele</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Sherer, Edward</td>\n",
-       "      <td>Devon Cyr</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Lexa, Katrina</td>\n",
-       "      <td>Devon Cyr</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Loverde, Sharon M.</td>\n",
-       "      <td>Devon Cyr</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>May, Eric</td>\n",
-       "      <td>Frank Hellickson</td>\n",
-       "      <td>[1.000, 0.000, 1.000]</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Lexa, Katrina</td>\n",
-       "      <td>Frank Hellickson</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Loverde, Sharon M.</td>\n",
-       "      <td>Frank Hellickson</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>May, Eric</td>\n",
-       "      <td>Hillary Hofman</td>\n",
-       "      <td>[1.000, 0.000, 1.000]</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Krämer, Andreas</td>\n",
-       "      <td>Hillary Hofman</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Loverde, Sharon M.</td>\n",
-       "      <td>Hillary Hofman</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Wolf, Antje</td>\n",
-       "      <td>Marica Bross</td>\n",
-       "      <td>[1.000, 0.500, 1.000]</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Acevedo, Orlando</td>\n",
-       "      <td>Marica Bross</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Krämer, Andreas</td>\n",
-       "      <td>Marica Bross</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Luber, Sandra</td>\n",
-       "      <td>Rosita Cornejo</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Lopez, Steven</td>\n",
-       "      <td>Rosita Cornejo</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Krämer, Andreas</td>\n",
-       "      <td>Rosita Cornejo</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>May, Eric</td>\n",
-       "      <td>Shana Galey</td>\n",
-       "      <td>[1.000, 0.000, 1.000]</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Wolf, Antje</td>\n",
-       "      <td>Shana Galey</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Lin, Yu-Shan</td>\n",
-       "      <td>Shana Galey</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Sherer, Edward</td>\n",
-       "      <td>Tiffiny Bradfield</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Lexa, Katrina</td>\n",
-       "      <td>Tiffiny Bradfield</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Lopez, Steven</td>\n",
-       "      <td>Tiffiny Bradfield</td>\n",
-       "      <td>[0.000, 0.000, 1.000]</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sherer, Edward</td>\n",
-       "      <td>Virgil Lebel</td>\n",
-       "      <td>[0.000, 1.000, 1.000]</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Lopez, Steven</td>\n",
-       "      <td>Virgil Lebel</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Luber, Sandra</td>\n",
-       "      <td>Virgil Lebel</td>\n",
-       "      <td>[0.000, 0.500, 1.000]</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Reviewer Name     Candidate Name  \\\n",
-       "14    Acevedo, Orlando   Bobby Plascencia   \n",
-       "19        Lin, Yu-Shan   Bobby Plascencia   \n",
-       "24       Luber, Sandra   Bobby Plascencia   \n",
-       "4          Wolf, Antje     Danuta Voegele   \n",
-       "15    Acevedo, Orlando     Danuta Voegele   \n",
-       "20        Lin, Yu-Shan     Danuta Voegele   \n",
-       "17      Sherer, Edward          Devon Cyr   \n",
-       "22       Lexa, Katrina          Devon Cyr   \n",
-       "26  Loverde, Sharon M.          Devon Cyr   \n",
-       "1            May, Eric   Frank Hellickson   \n",
-       "6        Lexa, Katrina   Frank Hellickson   \n",
-       "11  Loverde, Sharon M.   Frank Hellickson   \n",
-       "3            May, Eric     Hillary Hofman   \n",
-       "8      Krämer, Andreas     Hillary Hofman   \n",
-       "13  Loverde, Sharon M.     Hillary Hofman   \n",
-       "0          Wolf, Antje       Marica Bross   \n",
-       "9     Acevedo, Orlando       Marica Bross   \n",
-       "12     Krämer, Andreas       Marica Bross   \n",
-       "25       Luber, Sandra     Rosita Cornejo   \n",
-       "27       Lopez, Steven     Rosita Cornejo   \n",
-       "29     Krämer, Andreas     Rosita Cornejo   \n",
-       "5            May, Eric        Shana Galey   \n",
-       "18         Wolf, Antje        Shana Galey   \n",
-       "21        Lin, Yu-Shan        Shana Galey   \n",
-       "16      Sherer, Edward  Tiffiny Bradfield   \n",
-       "23       Lexa, Katrina  Tiffiny Bradfield   \n",
-       "28       Lopez, Steven  Tiffiny Bradfield   \n",
-       "2       Sherer, Edward       Virgil Lebel   \n",
-       "7        Lopez, Steven       Virgil Lebel   \n",
-       "10       Luber, Sandra       Virgil Lebel   \n",
-       "\n",
-       "   Itimized score [topics, methods, reviewer's history]  total_score  \n",
-       "14                              [0.000, 0.500, 1.000]            1.5  \n",
-       "19                              [0.000, 0.000, 1.000]            1.0  \n",
-       "24                              [0.000, 0.000, 1.000]            1.0  \n",
-       "4                               [1.000, 0.000, 1.000]            2.0  \n",
-       "15                              [0.000, 0.500, 1.000]            1.5  \n",
-       "20                              [0.000, 0.000, 1.000]            1.0  \n",
-       "17                              [0.000, 0.000, 1.000]            1.0  \n",
-       "22                              [0.000, 0.000, 1.000]            1.0  \n",
-       "26                              [0.000, 0.000, 1.000]            1.0  \n",
-       "1                               [1.000, 0.000, 1.000]            2.0  \n",
-       "6                               [0.000, 0.500, 1.000]            1.5  \n",
-       "11                              [0.000, 0.500, 1.000]            1.5  \n",
-       "3                               [1.000, 0.000, 1.000]            2.0  \n",
-       "8                               [0.000, 0.500, 1.000]            1.5  \n",
-       "13                              [0.000, 0.500, 1.000]            1.5  \n",
-       "0                               [1.000, 0.500, 1.000]            2.5  \n",
-       "9                               [0.000, 0.500, 1.000]            1.5  \n",
-       "12                              [0.000, 0.500, 1.000]            1.5  \n",
-       "25                              [0.000, 0.000, 1.000]            1.0  \n",
-       "27                              [0.000, 0.000, 1.000]            1.0  \n",
-       "29                              [0.000, 0.000, 1.000]            1.0  \n",
-       "5                               [1.000, 0.000, 1.000]            2.0  \n",
-       "18                              [0.000, 0.000, 1.000]            1.0  \n",
-       "21                              [0.000, 0.000, 1.000]            1.0  \n",
-       "16                              [0.000, 0.500, 1.000]            1.5  \n",
-       "23                              [0.000, 0.000, 1.000]            1.0  \n",
-       "28                              [0.000, 0.000, 1.000]            1.0  \n",
-       "2                               [0.000, 1.000, 1.000]            2.0  \n",
-       "7                               [0.000, 0.500, 1.000]            1.5  \n",
-       "10                              [0.000, 0.500, 1.000]            1.5  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    ''' This programs optimizes the matching between reviewers and candidates.\n",
@@ -734,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -748,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
